--- a/Pipfile
+++ b/Pipfile
@@ -4,12 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-importlib-metadata = "6.0.0"
-importlib-resources = "5.10.0"
-ipdb = "0.13.9"
-pytest = "7.1.2"
+importlib-metadata = "*"
+importlib-resources = "*"
+ipdb = "*"
+pytest = "*"
 
 [dev-packages]
 
 [requires]
-python_full_version = "3.8.13"
+python_full_version = "3.8.10"
